--- a/config.json
+++ b/config.json
@@ -23,5 +23,5 @@
         "announcements_channel": 995754813704896563
     },
 
-    "token": "MTAwOTk1NDU5ODA0MTE3ODE3NA.GhU-j9.iO45uWRoQ56XuxBrhxgGR4MDaJ22yT2mIvh9_Y"
+    "token": "CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC"
 }
